--- a/index.html
+++ b/index.html
@@ -682,15 +682,16 @@ based on dark.css by Vladimir Epifanov
 <thead>
 <tr>
 <th>Solution</th>
-<th style="text-align: center;">Java</th>
+<th style="text-align: center;">Jav</th>
 <th style="text-align: center;">PHP</th>
 <th style="text-align: center;">C#</th>
-<th style="text-align: center;">CryptoJS</th>
-<th style="text-align: center;">NodeJS</th>
-<th style="text-align: center;">NodeJs forge</th>
-<th style="text-align: center;">WebCrypto</th>
-<th style="text-align: center;">Python</th>
+<th style="text-align: center;">CJs</th>
+<th style="text-align: center;">Ndc</th>
+<th style="text-align: center;">Nfo</th>
+<th style="text-align: center;">Web</th>
+<th style="text-align: center;">Pyt</th>
 <th style="text-align: right;">Go</th>
+<th style="text-align: right;">Dar</th>
 </tr>
 </thead>
 <tbody>
@@ -705,6 +706,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: right;">✅</td>
+<td style="text-align: right;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/aes_cbc_256_string_decryption_only.md">CBC-mode String Decryption only</a></td>
@@ -716,6 +718,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: right;">❌</td>
 <td style="text-align: right;">❌</td>
 </tr>
 <tr>
@@ -729,6 +732,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: right;"></td>
+<td style="text-align: right;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/aes_cbc_256_pbkdf2_string_decryption_only.md">CBC-mode PBKDF2 String Decryption only</a></td>
@@ -740,6 +744,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">❌</td>
+<td style="text-align: right;">❌</td>
 <td style="text-align: right;">❌</td>
 </tr>
 <tr>
@@ -753,6 +758,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: right;"></td>
+<td style="text-align: right;">✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/aes_cbc_256_passphrase_string_encryption.md">CBC-mode passphrase String Encryption</a></td>
@@ -764,7 +770,8 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">❌</td>
-<td style="text-align: right;"></td>
+<td style="text-align: right;">❌</td>
+<td style="text-align: right;">❌</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/aes_gcm_256_string_encryption.md">GCM-mode String Encryption</a></td>
@@ -776,6 +783,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
+<td style="text-align: right;">✅</td>
 <td style="text-align: right;">✅</td>
 </tr>
 <tr>
@@ -789,6 +797,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: right;">✅</td>
+<td style="text-align: right;">✅</td>
 </tr>
 <tr>
 <td><a href="readme.md">GCM-mode PBKDF2 AAD String Encryption</a></td>
@@ -801,9 +810,11 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">🔜</td>
 <td style="text-align: right;">🔜</td>
+<td style="text-align: right;">🔜</td>
 </tr>
 </tbody>
 </table>
+<p>Jav=Java, PHP=PHP, C#=Csharp, CJs=Javascript with Crypto-JS, Ndc=NodeJs with Crypto, Nfo=NodeJs with forge, Web=WebCrypto, Pyt=Python, Go=Golang, Dar=Dart</p>
 <h4 id="aes-cbc-special-tampering">AES CBC special: tampering</h4>
 <table>
 <thead>
@@ -835,7 +846,7 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">Web</th>
 <th style="text-align: center;">Pyt</th>
 <th style="text-align: center;">Go</th>
-<th>Dar</th>
+<th style="text-align: center;">Dar</th>
 </tr>
 </thead>
 <tbody>
@@ -850,7 +861,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td>✅</td>
+<td style="text-align: center;">✅</td>
 </tr>
 </tbody>
 </table>
@@ -1210,9 +1221,9 @@ based on dark.css by Vladimir Epifanov
 <th style="text-align: center;">Nfo</th>
 <th style="text-align: center;">Web</th>
 <th style="text-align: center;">OSL</th>
-<th style="text-align: center;">Python</th>
+<th style="text-align: center;">Pyt</th>
 <th style="text-align: center;">Go</th>
-<th>Dar</th>
+<th style="text-align: center;">Dar</th>
 </tr>
 </thead>
 <tbody>
@@ -1228,7 +1239,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td></td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/ecdsa_signature_der_string.md">ECDSA String Signature DER encoding </a></td>
@@ -1242,7 +1253,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;">✅</td>
-<td></td>
+<td style="text-align: center;"></td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/ecdsa_signature_conversion.md">ECDSA signature converter DER ← → IEEE P1363 encoding </a></td>
@@ -1256,7 +1267,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;">❌</td>
 <td style="text-align: center;"></td>
-<td></td>
+<td style="text-align: center;"></td>
 </tr>
 </tbody>
 </table>
@@ -1360,7 +1371,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;">✅</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
-<td></td>
+<td>✅</td>
 </tr>
 <tr>
 <td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/argon2_parameter.md">Argon 2 parameter</a></td>
@@ -1511,7 +1522,7 @@ based on dark.css by Vladimir Epifanov
 <td style="text-align: center;"></td>
 </tr>
 <tr>
-<td>JSON web token JWA algorithms</td>
+<td><a href="https://github.com/java-crypto/cross_platform_crypto/blob/main/docs/json_web_token_jwa_algorithms.md">JSON web token JWA algorithms</a></td>
 <td>standardized algorithms for JWT</td>
 <td style="text-align: center;"></td>
 <td style="text-align: center;"></td>
@@ -1894,7 +1905,7 @@ based on dark.css by Vladimir Epifanov
 </tr>
 </tbody>
 </table>
-<p>Last upocsate: Aug. 17th 2021</p>
+<p>Last update: Aug. 18th 2021</p>
 <p>The website is published under:  <a href="https://java-crypto.github.io/cross_platform_crypto//">https://java-crypto.github.io/cross_platform_crypto//</a></p>
 <p>If you are interested in much more information on cryptography in Java (and in German language) then visit my webpages <a href="http://javacrypto.bplaced.net/">http://javacrypto.bplaced.net</a> and <a href="http://java-crypto.bplaced.net/">http://java-crypto.bplaced.net</a>.</p>
 
