--- a/EcSignatureP256Sha256DerString/ecsignaturederstringsign.html
+++ b/EcSignatureP256Sha256DerString/ecsignaturederstringsign.html
@@ -25,9 +25,9 @@ my webpage <b>Elliptic key string signature (ECDSA) with DER encoding</b></a><br
 </p><hr>	  
 	  
 <p>Insert your own Private Key (in PEM encoding):</p>
-<textarea name="privatekey-value" id="privatekey-value" form= "myform" rows="6" cols="70">-----BEGIN EC PRIVATE KEY-----
-MEECAQAwEwYHKoZIzj0CAQYIKoZIzj0DAQcEJzAlAgEBBCAU2f8tzo99Z1HoxJlY96yXUhFY5vppVjw1iPKRfk1wHA==
------END EC PRIVATE KEY-----</textarea>
+<textarea name="privatekey-value" id="privatekey-value" form= "myform" rows="6" cols="70">-----BEGIN PRIVATE KEY-----
+MIGHAgEAMBMGByqGSM49AgEGCCqGSM49AwEHBG0wawIBAQQgciPt/gulzw7/Xe12YOu/vLUgIUZ+7gGo5VkmU0B+gUWhRANCAAQxkee3UPW110s0aUQdcS0TDkr8blAeSBouL4hXziiJX5Me/8OobFgNfYXkk6R/K/fqJhJ/mV8gLur16XhgueXA
+-----END PRIVATE KEY-----</textarea>
 <section class="import-key spki">
 <p>Enter a message to sign:</p>
 <input type="text" id="plaintext" name="plaintext" size="50" value="The quick brown fox jumps over the lazy dog">
@@ -77,7 +77,7 @@ const bufToB64 = buf =>
   
     /**
      * Converts an ECDSA signature from P1363 to DER format
-	 * source: https://developer.token.io/sdk/esdoc/file/src/security/CryptoBrowser.js.html
+	 * source: https://developer.token.io/sdk/esdoc/file/Post_Quantum_Cryptography.PQC_Rainbow_Signature.src/security/CryptoBrowser.js.html
      *
      * @param {Uint8Array} sig - P1363 signature
      * @return {Uint8Array} DER signature
@@ -100,7 +100,7 @@ const bufToB64 = buf =>
  
     /**
      * Converts an ECDSA signature from DER to P1363 format
-	 * source: https://developer.token.io/sdk/esdoc/file/src/security/CryptoBrowser.js.html
+	 * source: https://developer.token.io/sdk/esdoc/file/Post_Quantum_Cryptography.PQC_Rainbow_Signature.src/security/CryptoBrowser.js.html
      *
      * @param {Uint8Array} sig - DER signature
      * @return {Uint8Array} P1363 signature
@@ -125,8 +125,8 @@ const bufToB64 = buf =>
         */
         function importPrivateKey(pem) {
           // fetch the part of the PEM string between header and footer
-          const pemHeader = "-----BEGIN EC PRIVATE KEY-----";
-          const pemFooter = "-----END EC PRIVATE KEY-----";
+          const pemHeader = "-----BEGIN PRIVATE KEY-----";
+          const pemFooter = "-----END PRIVATE KEY-----";
           const pemContents = pem.substring(pemHeader.length, pem.length - pemFooter.length);
           // base64 decode the string to get the binary data
           const binaryDerString = window.atob(pemContents);
