--- a/EcSignatureP256Sha256DerString/ecsignaturederstringverification.html
+++ b/EcSignatureP256Sha256DerString/ecsignaturederstringverification.html
@@ -25,7 +25,7 @@ my webpage <b>Elliptic key string signature (ECDSA) with DER encoding</b></a></p
 <hr>
 <p>Insert the Public Key you received (PEM encoding):</p>
 <textarea name="publickey-value" id="publickey-value" form= "myform" rows="5" cols="70">-----BEGIN PUBLIC KEY-----
-MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEzb7yAFWup6iDqJiEq764rAumsV2MrspZxaP3WGpwHaC4Uff3N4UbJZF7Zac1c6W7KJl0eeCP0205Q3UEpwxndQ==
+MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEMZHnt1D1tddLNGlEHXEtEw5K/G5QHkgaLi+IV84oiV+THv/DqGxYDX2F5JOkfyv36iYSf5lfIC7q9el4YLnlwA==
 -----END PUBLIC KEY-----</textarea>
 		  
 <section class="import-key spki">
@@ -33,7 +33,7 @@ MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEzb7yAFWup6iDqJiEq764rAumsV2MrspZxaP3WGpwHaC4
 <input type="text" id="plaintext" name="plaintext" size="50" value="The quick brown fox jumps over the lazy dog">
 <hr>
 <p>Enter the signature to verify (the signature has to be in DER format and base64 encoded):</p>
-<textarea name="spki-message" id="spki-message" form="myform" rows="4" cols="64">MEQCIBBqwwBp4jC4UgiBWeJOxP+NNQRT+VhbohFEiv7HU8C+AiCQgEwWKxiX7/Xf4XG1n06qE4YdKyer2ROORvcR1lirKg==</textarea>
+<textarea name="spki-message" id="spki-message" form="myform" rows="4" cols="64">MEQCIPsioghihMGyEJGc0n9TSi+0TSgFWuKtXnQxE6QN5daRAiDkWEg8TvfLlp7q/R9YjURjMIJBie8ZlFw28Yep8/NG6g==</textarea>
 <hr>
 <p><b>Instructions:</b><br>
 1.: insert the received public key and press the "Import key" button<br>
@@ -86,7 +86,7 @@ MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEzb7yAFWup6iDqJiEq764rAumsV2MrspZxaP3WGpwHaC4
 	
     /**
      * Converts an ECDSA signature from P1363 to DER format
-	 * source: https://developer.token.io/sdk/esdoc/file/src/security/CryptoBrowser.js.html
+	 * source: https://developer.token.io/sdk/esdoc/file/Post_Quantum_Cryptography.PQC_Rainbow_Signature.src/security/CryptoBrowser.js.html
      *
      * @param {Uint8Array} sig - P1363 signature
      * @return {Uint8Array} DER signature
@@ -109,7 +109,7 @@ MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEzb7yAFWup6iDqJiEq764rAumsV2MrspZxaP3WGpwHaC4
  
     /**
      * Converts an ECDSA signature from DER to P1363 format
-	 * source: https://developer.token.io/sdk/esdoc/file/src/security/CryptoBrowser.js.html
+	 * source: https://developer.token.io/sdk/esdoc/file/Post_Quantum_Cryptography.PQC_Rainbow_Signature.src/security/CryptoBrowser.js.html
      *
      * @param {Uint8Array} sig - DER signature
      * @return {Uint8Array} P1363 signature
